Scripted auto-commit on change (2019-10-14 21:54:12) by gitwatch.sh